fix alignment of header

--- a/app/assets/stylesheets/full.css.scss
+++ b/app/assets/stylesheets/full.css.scss
@@ -67,7 +67,6 @@ header {
 	h2 {
 		font-size: 60px;
 		line-height: 65px;
-		margin-left: 5px;
 	}	
 
 	.sponsor {
@@ -84,7 +83,6 @@ header {
 	.details {
 		color: $primary;
 		font: 500 24px/24px $family;
-		margin-left: 5px;
 		text-transform: uppercase;
 	}
 }
